저장소 초기화, index 페이지 작성

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "semiporjectv2-react-spa",
+  "name": "semiprojectv2-react-spa",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
